[package]
name = "clickhouse_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version ="1.25",features=["full"]}
chrono="0.4"
anyhow = "1"
clickhouse = "*"
serde = {version="1",features=["derive"]}
rand = "0.8.5"